# rust_sdl2_engine

./: .gitignore  Cargo.toml  README.md  build.rs  imgui.todo  tasks.todo
leek/: Cargo.toml
leek/src/: common_macros.rs  fps_counter.rs  lib.rs  prelude.rs  sdl2_utils.rs
leek/src/alto_utils/: mod.rs
leek/src/assets/: mod.rs
leek/src/engine/: context.rs  game.rs  mod.rs
leek/src/font/: mod.rs
leek/src/game_controllers/: game_controller.rs
leek/src/imgui_backend/: input.rs  mod.rs
leek/src/opengl/: enums.rs  mod.rs  state.rs  vertex_buffer.rs
leek/src/opengl/texture/: mod.rs
leek/src/post_processing/: mod.rs
leek/src/post_processing/shaders/: glsl_130.vert
leek/src/resources/: cache.rs  keys.rs  mod.rs
leek_codegen/: Cargo.toml  build.rs
leek_codegen/src/: lib.rs
src/: action.rs  common_macros.rs  context.rs  fps_counter.rs  game.rs  lib.rs  math.rs  opengl.rs  prelude.rs  resources.rs  sdl2_utils.rs
src/alto_utils/: mod.rs
src/assets/: mod.rs
src/debug/: mod.rs
src/engine/: action.rs  context.rs  game.rs  mod.rs
src/font/: mod.rs
src/game_controllers/: game_controller.rs  mod.rs
src/imgui_backend/: input.rs
src/imgui_backend/shaders/: glsl_130.frag  glsl_130.vert
src/opengl/: enums.rs  mod.rs  shader.rs  vertex_attrib.rs  vertex_buffer.rs
src/opengl/texture/: enums.rs
src/post_processing/: mod.rs
src/post_processing/shaders/: glsl_130.frag
src/resources/: cache.rs  keys.rs  mod.rs
src/resources_cache/: cache.rs  keys.rs  load.rs  mod.rs
