[package]
authors = ["Davide Giovannini <giovannini.davide90@gmail.com>"]
build = "build.rs"
name = "sdl2_engine"
version = "0.1.0"

[dependencies]
gl = "0.7.0"
alto = "3.0.1"
lewton = "0.7.0"
failure = "0.1.1"

[dependencies.sdl2]
default-features = false
features = [
    "ttf",
    "image",
    "gfx",
    "unsafe_textures",
]
version = "0.31"
